<resources>
    <string name="app_name">Rent Car</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_agreement">By login, you agree our Term of use and policy.\nFor more information please click here.</string>
    <string name="rental_car">RENTAL CAR</string>
    <string name="forgot_password_click_here">Forgot Password? Click here!</string>
    <string name="err_empty_email_password">The Email or Password can not be Empty</string>
    <string name="register">Register</string>
    <string name="phone">Phone Number</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="joint_us_now">Not a member? Joint us now!</string>
    <string name="err_invalid_email">Invalid email</string>
    <string name="welcome_back">Welcome back</string>
    <string name="car">Car</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="home">Home</string>
    <string name="debug">Debug</string>
    <string name="price">%s $</string>
    <string name="logo">logo</string>
    <string name="bmw">BMW</string>
    <string name="volkswagon">Volkswagon</string>
    <string name="volvo">Volvo</string>
    <string name="audi">Audi</string>
    <string name="toyota">Toyota</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search your dream car</string>
    <string name="e_mail">E-mail</string>
    <string name="sample_email">ah.ferdosizadeh@gmail.com</string>
    <string name="_09364936401">09364936401</string>
    <string name="sample_city_name">Tehran</string>
    <string name="sample_name">AMIR HOSSEIN</string>
    <string name="reservation_list">Reservations</string>
    <string name="profile">Profile</string>
    <string name="book_it">Book it!</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="white">White</string>
    <string name="price_per_day">Price per day</string>
    <string name="gearbox">Gear box</string>
    <string name="fuel">Fuel</string>
    <string name="seat">Seat</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="year_old">Year old</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="activity_book_car_header">Make your choice</string>
    <string name="accept_and_pay">Accept and pay</string>
    <string name="feature_brand">Feature Brand</string>
    <string name="cars">Cars</string>
    <string name="please_wait">Please wait</string>
    <string name="succssfully_booked">Car successfully booked</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="other_option">Other option</string>
    <string name="pickup">Pickup</string>
    <string name="_return">Return</string>
    <string name="car_type">Car Type</string>
    <string name="transmission">Transmission</string>
    <string name="filter">Filter</string>
    <string name="server_address">Server Address</string>
    <string name="setting">Setting</string>
</resources>
