<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:letterSpacing="0.1"
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/sample_name"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_location"
        android:gravity="center"
        android:text="@string/sample_city_name"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/e_mail" />

    <TextView
        android:id="@+id/tvEmail"
        style="@style/AppTheme.SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        style="@style/AppTheme.SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reservation_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listMyReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        tools:itemCount="10"
        tools:listitem="@layout/item_reservation" />

</androidx.appcompat.widget.LinearLayoutCompat>